fix overflow text

--- a/Milestone 2/css/style.css
+++ b/Milestone 2/css/style.css
@@ -217,17 +217,13 @@ aside {
 }
 
 .message {
-    min-height: 55px;
     max-width: 60%;
     min-width: 200px;
     border-radius: 15px;
     padding: 10px;
     margin-top: 10px;
-    display: flex;
-    align-items: center;
     line-height: 20px;
-    position: relative;
-    z-index: 0;
+    overflow-wrap: break-word;
 }
 
 .received {
